Issue #300 : Redesign "Network Configuration" UI
- Disable scroll bars when they are not needed
- Enable Actions button when selecting more than one interface

Required js,css,scss changes in Ginger for above mentioned issue.

v1 : Fix for code review comment(icon is too close to checkbox)

--- a/ui/css/ginger.css
+++ b/ui/css/ginger.css
@@ -835,7 +835,7 @@
 
 #network-content-area .bootgrid-table tbody {
   height: 250px;
-  overflow: scroll;
+  overflow: auto;
   position: absolute;
   width: 100%;
 }
