--- a/ui/css/src/modules/_network.scss
+++ b/ui/css/src/modules/_network.scss
@@ -138,7 +138,7 @@
     }
     tbody {
       height: 250px;
-      overflow: scroll;
+      overflow: auto;
       position: absolute;
       width: 100%;
     }
